--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@
 }
 
 .logo {
-    outline: 1px solid red;
+    margin-left:10px;
     background-image: url(resolve-url-loader!./logo.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -14,15 +14,12 @@
     width: 105px;
 }
 
-.mbtn {
-    outline: 1px solid red;
-    width: 40px;
-}
+
 
 .mentry {
-    width:40px;
-    outline: 1px solid red;
-    background-color: #efefef;
+    width:25px;
+    color:red;
+    margin:12px;
 }
 
 .menu{
@@ -31,13 +28,13 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
-    background-color: #efefef;
+    background-color: #fff;
     transition: 0.5s;
 }
 .mnav {
     margin-top: 20px;
+    margin-bottom:20px;
     height: 41px;
-    outline: 1px solid red;
     position: relative;
 }
 
@@ -46,40 +43,46 @@
     margin-left: 15px;
     margin-right: 15px;
     line-height: 41px;
-    outline: 1px solid black;
 }
 
 .item,.mbody ul {
-    outline:1px solid red;
+
     list-style: none;
     padding:0px;
     margin:0px;
+}
+.item {
+    border-top:1px solid #ccc;
+}
+.item:last-child{
+    border-bottom:1px solid #ccc;
 }
 
 
 
 .item {
     height:80px;
+    line-height: 80px;
     display:flex;
     align-items: center;
+    padding-left:5px;
+
 }
-.item .micon{
-    width:10px;
-    outline:1px solid green;
-}
+
 .item .title{
-    outline:1px solid yellow;
-    width:5em;
+    font-size: 20px;
+    margin-left:10px;
+    width:4.5em;
 }
 
 .item .desc{
-    margin-left:5px;
-    outline:1px solid red;
+    font-size: 14px;
+    color:#999;
 }
 
 .close{
     position: absolute;
-    right:0px;
+    right:10px;
     top:3px;
     font-size: 30px;
     transform: rotate(45deg);
